Added content to pancake page
added image, recipe description, ingredients, and directions

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <h1>
             Odin recipes
+            <a href="./recipes/from-scratch-pancakes.html">From Scratch Pancakes</a>
         </h1>
     </body>
 </html>
