--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <body>
         <h1>
             Odin recipes
-            <a href="./recipes/from-scratch-pancakes.html">From Scratch Pancakes</a>
+            <ul> 
+                <li><a href="./recipes/from-scratch-pancakes.html">From Scratch Pancakes</a></li>
+                <li><a href="./recipes/rigatoni-alla-vodka.html">Rigatoni Alla Vodka</a></li>
+                <li><a href="./recipes/the-perfect-frid-egg.html">The Perfect Fried Egg</a></li>
+            </ul>
         </h1>
     </body>
 </html>
