typo fix in vodka

--- a/recipes/rigatoni-alla-vodka.html
+++ b/recipes/rigatoni-alla-vodka.html
@@ -57,7 +57,7 @@
                     Season generously with salt, black pepper, and add red pepper flakes to your preference, but don't be afraid of them - they really make this dish come alive.
                 </li>
                 <li>
-                    Drain pasta, reserve 1/4 cup of the water and add to sauce. Add pasta to sauce and mix to combine. Serve immediately, ideally with a caesar salad that you prepared ahead of time, and garnish each bowl parmigianio reggiano. Serve with a sangiovese or a super tuscan.
+                    Drain pasta, reserve 1/4 cup of the water and add to sauce. Add pasta to sauce and mix to combine. Serve immediately, ideally with a caesar salad that you prepared ahead of time, and garnish each bowl with parmigianio reggiano. Serve with a sangiovese or a super tuscan.
                 </li>
 
             </ol>
