typo fixes, added title elements fixed typos and added title elements for all pages

--- a/recipes/rigatoni-alla-vodka.html
+++ b/recipes/rigatoni-alla-vodka.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        Rigatonia Alla Vodka
+        <title>Rigatoni Alla Vodka</title>
     </head>
     <body>
         <h1>
