--- a/recipes/the-perfect-frid-egg.html
+++ b/recipes/the-perfect-frid-egg.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        The Perfect Fried Egg
+        <title>The Perfect Fried Egg</title> 
     </head>
     <body>
         <h1>
