--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        Recipes
+        <title>Recipes</title>
     </head>
     <body>
         <h1>
@@ -10,7 +10,7 @@
             <ul> 
                 <li><a href="./recipes/from-scratch-pancakes.html">From Scratch Pancakes</a></li>
                 <li><a href="./recipes/rigatoni-alla-vodka.html">Rigatoni Alla Vodka</a></li>
-                <li><a href="./recipes/the-perfect-frid-egg.html">The Perfect Fried Egg</a></li>
+                <li><a href="./recipes/the-perfect-fried-egg.html">The Perfect Fried Egg</a></li>
             </ul>
         </h1>
     </body>
