fixed title for pancakes header

--- a/recipes/from-scratch-pancakes.html
+++ b/recipes/from-scratch-pancakes.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        From Scratch Pancakes
+        <title>From Scratch Pancakes</title>
     </head>
     <body>
         <h1>
